# fastrpc

./: .gitignore  README.md  configure.ac
.github/: nightly-kernel-build.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/actions/aws_s3_helper/: action.yml
.github/actions/lava_job_render/: action.yml
.github/actions/sync/: action.yml
.github/workflows/: PR_check.yml  abi-compat.yml  build_linux_android.yml  build_linux_arm64.yml  build_linux_gnu.yml  clang-format.yml  codacy.yml  codeql.yml  loading.yml  memory-leak-check.yml  nightly-kernel-build.yml  pkg-build-pr-check.yml  qcom-preflight-checks.yml  run_armor.yml  stale-issues.yaml  sync_build.yml  test.yml
ci/: MACHINES.json  build.sh
files/: Makefile.am  adsprpcd_audiopd.service
inc/: Makefile.am  apps_std_internal.h  fastrpc_internal.h  fastrpc_mem.h  rpcmem_internal.h
public_headers/: config.yml
src/: Makefile.am  apps_mem_imp.c  apps_std_imp.c  dsprpcd.c  dspsignal.c  fastrpc_apps_user.c  fastrpc_cap.c  fastrpc_ioctl.c  fastrpc_mem.c  rpcmem_linux.c  symbols.lst
